flask-stephen/templates/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: hello-flask
 labels:
   app: hello-flask
spec:
 replicas: 1
 selector:
   matchLabels:
     app: hello-flask
 template:
   metadata:
     labels:
       app: hello-flask
   spec:
     containers:
     - name: flask
       image: public.ecr.aws/sctp-sandbox/luqman-flask-ecr-app:latest
       ports:
       - containerPort: 8000
