flask-stephen/templates/Service.yaml
apiVersion: v1
kind: Service
metadata:
 name: hello-flask
spec:
 ports:
   - protocol: TCP
     port: 80
     targetPort: 8000
 selector:
   app: hello-flask
